# discord-live-notificationbot

./: CHANGELOG.md  README.md  discord-live-notificationbot.py  launch.json  pyproject.toml  start.sh
cogs/: livenotificationcog.py  webservercog.py
cogs/modules/: aes_angou.py  live_notification.py  pubsub_flask.py  pubsub_handler.py  pubsub_subscribe.py  setting.py
cogs/modules/files/: .env.sample
